# ANorth_motors

./: .env  .gitignore  backup_chatbot_d5fa.js  backup_chatbot_fe61.js  backup_inv.js  backup_scraper_7ce4.py  backup_scraper_d5fa.py  backup_scraper_premium.py  check_components.py  craco.config.js  fix_api.py  fix_api_2.py  package-lock.json  package.json  premium_chatbot.js  premium_inventory_final.js  pyproject.toml  requirements.txt  seed_db.py  tailwind.config.js  temp_admin.js  temp_chatbot.js  vercel.json
.emergent/: emergent.yml
api/: index.py  test.py
backend/: check_candidates.py  check_db.py  data_check.py  requirements.txt  scraper.py  server.py  test_build_id.py  test_fetch.py  test_scraper.py
backend/scratch/: check_db.py  check_db_images.py  check_settings.py  clean_analyze.py  inspect_db_settings.py  inspect_f150.py  inspect_hit.py  inspect_mustang.py  inspect_settings.py  test_algolia.py  test_algolia_v2.py  test_algolia_v3.py  test_images.py  test_sync_final.py
backend/tests/: test_autonorth.py
frontend/: Pipfile  package-lock.json  package.json  requirements.txt  vercel.json
frontend/api/: index.py
frontend/public/: index.html  sample-inventory.csv
frontend/src/: App.js  index.js
memory/: PRD.md
public/: index.html  robots.txt  sitemap.xml
scratch/: check_db.py  create_indexes.py  fix_ui.py  repair_db.py
src/: App.js  diagnose_icons.js  index.css
src/components/: AdminLayout.js  AnimatedLogo.js  ChatBot.js  ExitIntentPopup.js  Footer.js  Navbar.js  ProtectedRoute.js  SecurityModal.js  Showroom.js  SymbolicLogo.js  VehicleCard.js
(+36 files in other folders)
