[project]
name = "autonorth"
version = "0.1.0"
requires-python = "~=3.12"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn==0.30.1",
    "motor==3.4.0",
    "pymongo==4.7.2",
    "pydantic==2.7.4",
    "bcrypt==4.1.3",
    "pyjwt==2.8.0",
    "python-dotenv==1.0.1",
    "python-multipart==0.0.9",
    "google-genai",
    "beautifulsoup4==4.12.3",
    "requests==2.31.0"
]
